# VulnCheck

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: Analyzer_8cpp.html  Analyzer_8cpp__incl.map  Analyzer_8cpp__incl.md5  Analyzer_8hpp.html  Analyzer_8hpp__dep__incl.map  Analyzer_8hpp__dep__incl.md5  Analyzer_8hpp__incl.map  Analyzer_8hpp__incl.md5  Analyzer_8hpp_source.html  AnsiColor_8hpp.html  AnsiColor_8hpp__dep__incl.map  AnsiColor_8hpp__dep__incl.md5  AnsiColor_8hpp__incl.map  AnsiColor_8hpp__incl.md5  AnsiColor_8hpp_source.html  JsonReportWriter_8cpp.html  JsonReportWriter_8cpp__incl.map  JsonReportWriter_8cpp__incl.md5  JsonReportWriter_8hpp.html  JsonReportWriter_8hpp__dep__incl.map  JsonReportWriter_8hpp__dep__incl.md5  JsonReportWriter_8hpp__incl.map  JsonReportWriter_8hpp__incl.md5  JsonReportWriter_8hpp_source.html  MatchResult_8hpp.html  MatchResult_8hpp__dep__incl.map  MatchResult_8hpp__dep__incl.md5  MatchResult_8hpp__incl.map  MatchResult_8hpp__incl.md5  MatchResult_8hpp_source.html  PatternLoader_8cpp.html  PatternLoader_8cpp__incl.map  PatternLoader_8cpp__incl.md5  PatternLoader_8hpp.html  PatternLoader_8hpp__dep__incl.map  PatternLoader_8hpp__dep__incl.md5  PatternLoader_8hpp__incl.map  PatternLoader_8hpp__incl.md5  PatternLoader_8hpp_source.html  README_8md.html  (+69 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+43 more)
patterns/: vulnerabilities.yaml
src/: Analyzer.cpp  MatchResult.hpp  PatternLoader.cpp  PatternLoader.hpp  VulnerabilityPattern.hpp  main.cpp
src/Report/: JsonReportWriter.cpp  JsonReportWriter.hpp
src/include/: Analyzer.hpp  AnsiColor.hpp  JsonReportWriter.hpp  MatchResult.hpp  PatternLoader.hpp  VulnerabilityPattern.hpp
test_service/: service.py  service_one.py  service_three.py  service_two.py
tests/: CMakeLists.txt  test_analyzer.cpp  test_json_report_writer.cpp  test_loader.cpp  test_pattern_loader.cpp
